--- a/SciPaperService/src/main/resources/application.properties
+++ b/SciPaperService/src/main/resources/application.properties
@@ -41,3 +41,9 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dial
 spring.jpa.open-in-view=false
 
 server.port=9002
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.fetch-service-url=http://localhost:8761/eureka/
+eureka.instance.hostname=localhost
+
+spring.application.name = SCIPAPER-SERVICE
