feat: adds the library service, with messaging between it and the scipaper service

--- a/ApiGateway/src/main/resources/application.yml
+++ b/ApiGateway/src/main/resources/application.yml
@@ -20,3 +20,12 @@ spring:
               args:
                 name: SCIPAPER-SERVICE
                 fallbackuri: forward:/sciPaperServiceFallback
+        - id: LIBRARY-SERVICE
+          uri: lb://LIBRARY-SERVICE
+          predicates:
+            - Path=/library-service/**
+          filters:
+            - name: CircuitBreaker
+              args:
+                name: LIBRARY-SERVICE
+                fallbackuri: forward:/libraryServiceFallback
